<resources>
    <string name="app_name">Score Stack</string>
    <string name="score_stack">Score Stack</string>
    <string name="new_game">New Game</string>
    <string name="end_turn">End Turn</string>
    <string name="roll">Roll</string>
    <string name="dice">Dice</string>
    <string name="checkbox">Checkbox</string>
    <string name="score_left">
        Aces
        <br />
        Twos
        <br />
        Threes
        <br />
        Fours
        <br />
        Fives
        <br />
        Sixes
        <br />
        Bonus
    </string>
    <string name="score_right">
        Three of a Kind
        <br />
        Four of a Kind
        <br />
        Full House
        <br />
        Small Straight
        <br />
        Large Straight
        <br />
        Five of a Kind
        <br />
        Chance (Total)
    </string>
    <string name="score_equals">=</string>

    <string name="aces">Aces</string>
    <string name="twos">Twos</string>
    <string name="threes">Threes</string>
    <string name="fours">Fours</string>
    <string name="fives">Fives</string>
    <string name="sixes">Sixes</string>
    <string name="bonus">Bonus</string>

    <string name="three_oak">Three of a Kind</string>
    <string name="four_oak">Four of a Kind</string>
    <string name="full_house">Full House</string>
    <string name="small_straight">Small Straight</string>
    <string name="large_straight">Large Straight</string>
    <string name="five_oak">Five of a Kind</string>
    <string name="chance">Chance (Total)</string>

    <string name="high_score_text">
        Total Score:
        <br />
        Daily HS:
        <br />
        Weekly HS:
        <br />
        All Time HS:
    </string>
    <string name="dash">-</string>
    <string name="final_results">Final Results</string>
    <string name="high_score">High Score</string>
    <string name="results">Results</string>
    <string name="next_turn">Next Turn</string>
    <string name="select_a_category">Select a Category</string>
    <string name="twenty_five">25</string>
    <string name="thirty">30</string>
    <string name="forty">40</string>
    <string name="fifty">50</string>
    <string name="play">Play</string>

</resources>