<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_red">

    <ImageView
        android:id="@+id/finalResultBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/final_results"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/final_results" />

    <TextView
        android:id="@+id/ls_score"
        android:layout_width="69dp"
        android:layout_height="37dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="6dp"
        android:font="@font/exo_bold"
        android:fontFamily="@font/exo_bold"
        android:text="@string/dash"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/score_equals_bottom"
        app:layout_constraintTop_toBottomOf="@+id/ss_score" />

    <TextView
        android:id="@+id/fiveoak_score"
        android:layout_width="69dp"
        android:layout_height="37dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="6dp"
        android:font="@font/exo_bold"
        android:fontFamily="@font/exo_bold"
        android:text="@string/dash"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/score_equals_bottom"
        app:layout_constraintTop_toBottomOf="@+id/ls_score" />

    <TextView
        android:id="@+id/score_top"
        android:layout_width="84dp"
        android:layout_height="262dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="72dp"
        android:font="@font/exo_bold"
        android:fontFamily="@font/exo_bold"
        android:lineSpacingExtra="10sp"
        android:text="@string/score_left"
        android:textAlignment="textStart"
        android:textColor="@color/light_gray"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/finalResultBack"
        app:layout_constraintTop_toTopOf="@+id/finalResultBack" />

    <TextView
        android:id="@+id/score_equals_top"
        android:layout_width="26dp"
        android:layout_height="263dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="72dp"
        android:font="@font/exo_bold"
        android:fontFamily="@font/exo_bold"
        android:lineSpacingExtra="10sp"
        android:text="@string/score_equals"
        android:textAlignment="center"
        android:textColor="@color/light_gray"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/score_top"
        app:layout_constraintTop_toTopOf="@+id/finalResultBack" />

    <TextView
        android:id="@+id/score_bottom"
        android:layout_width="191dp"
        android:layout_height="274dp"
        android:layout_marginStart="24dp"
        android:font="@font/exo_bold"
        android:fontFamily="@font/exo_bold"
        android:lineSpacingExtra="10sp"
        android:text="@string/score_right"
        android:textAlignment="textStart"
        android:textColor="@color/light_gray"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/finalResultBack"
        app:layout_constraintTop_toBottomOf="@+id/score_top" />

    <TextView
        android:id="@+id/score_equals_bottom"
        android:layout_width="26dp"
        android:layout_height="277dp"
        android:layout_marginStart="17dp"
        android:font="@font/exo_bold"
        android:fontFamily="@font/exo_bold"
        android:lineSpacingExtra="10sp"
        android:text="@string/score_equals"
        android:textAlignment="center"
        android:textColor="@color/light_gray"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/score_bottom"
        app:layout_constraintTop_toBottomOf="@+id/score_equals_top" />

    <ImageButton
        android:id="@+id/newGameButton"
        android:layout_width="383dp"
        android:layout_height="80dp"
        android:background=""
        android:contentDescription="@string/new_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/finalResultBack"
        app:layout_constraintVertical_bias="0.555"
        app:srcCompat="@drawable/blue_button" />

    <TextView
        android:id="@+id/newGameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:font="@font/exo_bold"
        android:fontFamily="@font/exo_bold"
        android:text="@string/new_game"
        android:textColor="@color/dark_gray"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/newGameButton"
        app:layout_constraintEnd_toEndOf="@+id/newGameButton"
        app:layout_constraintStart_toStartOf="@+id/newGameButton"
        app:layout_constraintTop_toTopOf="@+id/newGameButton" />

    <TextView
        android:id="@+id/final_results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:font="@font/exo_bold"
        android:fontFamily="@font/exo_bold"
        android:text="@string/final_results"
        android:textColor="@color/light_gray"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/finalResultBack"
        app:layout_constraintStart_toStartOf="@+id/finalResultBack"
        app:layout_constraintTop_toTopOf="@+id/finalResultBack" />

    <TextView
        android:id="@+id/aces_score"
        android:layout_width="68dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="12dp"
        android:font="@font/exo_bold"
        android:fontFamily="@font/exo_bold"
        android:text="@string/dash"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/score_equals_top"
        app:layout_constraintTop_toBottomOf="@+id/final_results" />

    <TextView
        android:id="@+id/twos_score"
        android:layout_width="68dp"
        android:layout_height="42dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:font="@font/exo_bold"
        android:fontFamily="@font/exo_bold"
        android:text="@string/dash"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/score_equals_top"
        app:layout_constraintTop_toBottomOf="@+id/aces_score" />

    <TextView
        android:id="@+id/threes_score"
        android:layout_width="69dp"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:font="@font/exo_bold"
        android:fontFamily="@font/exo_bold"
        android:text="@string/dash"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/score_equals_top"
        app:layout_constraintTop_toBottomOf="@+id/twos_score" />

    <TextView
        android:id="@+id/fours_score"
        android:layout_width="69dp"
        android:layout_height="37dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:font="@font/exo_bold"
        android:fontFamily="@font/exo_bold"
        android:text="@string/dash"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/score_equals_top"
        app:layout_constraintTop_toBottomOf="@+id/threes_score" />

    <TextView
        android:id="@+id/fives_score"
        android:layout_width="69dp"
        android:layout_height="37dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:font="@font/exo_bold"
        android:fontFamily="@font/exo_bold"
        android:text="@string/dash"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/score_equals_top"
        app:layout_constraintTop_toBottomOf="@+id/fours_score" />

    <TextView
        android:id="@+id/sixes_score"
        android:layout_width="69dp"
        android:layout_height="37dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:font="@font/exo_bold"
        android:fontFamily="@font/exo_bold"
        android:text="@string/dash"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/score_equals_top"
        app:layout_constraintTop_toBottomOf="@+id/fives_score" />

    <TextView
        android:id="@+id/toak_score"
        android:layout_width="69dp"
        android:layout_height="37dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:font="@font/exo_bold"
        android:fontFamily="@font/exo_bold"
        android:text="@string/dash"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/score_equals_bottom"
        app:layout_constraintTop_toBottomOf="@+id/sixes_score" />

    <TextView
        android:id="@+id/foak_score"
        android:layout_width="69dp"
        android:layout_height="37dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:font="@font/exo_bold"
        android:fontFamily="@font/exo_bold"
        android:text="@string/dash"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/score_equals_bottom"
        app:layout_constraintTop_toBottomOf="@+id/toak_score" />

    <TextView
        android:id="@+id/fh_score"
        android:layout_width="69dp"
        android:layout_height="37dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:font="@font/exo_bold"
        android:fontFamily="@font/exo_bold"
        android:text="@string/dash"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/score_equals_bottom"
        app:layout_constraintTop_toBottomOf="@+id/foak_score" />

    <TextView
        android:id="@+id/ss_score"
        android:layout_width="69dp"
        android:layout_height="37dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="6dp"
        android:font="@font/exo_bold"
        android:fontFamily="@font/exo_bold"
        android:text="@string/dash"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/score_equals_bottom"
        app:layout_constraintTop_toBottomOf="@+id/fh_score" />


</androidx.constraintlayout.widget.ConstraintLayout>